# zbx-np

./: .gitignore  Cargo.toml  README.md  build-and-bundle.bat  build-tauri-with-server.bat  config.json  dev-mode.bat  run-tauri.bat
src/: admin.html  api.rs  auth.rs  main.rs  websockets.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
