[package]
name = "zbx-np"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
glob = "0.3.1"
serde_json = "1.0.96"
winapi = { version = "0.3", features = ["fileapi", "winbase"] }
actix-web-httpauth = "0.8.0"
once_cell = "1.17.1"
base64 = "0.13.0"
rand = "0.8.5"
paho-mqtt = { version = "0.12.1", features=["vendored-ssl"] }
lazy_static = "1.4.0"
