[package]
name = "zbx-np"
version = "0.9.0"
edition = "2021"

[lib]
name = "zbx_np"
path = "src/main.rs"

[[bin]]
name = "zbx-np-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
glob = "0.3.1"
serde_json = "1.0.96"
winapi = { version = "0.3", features = ["fileapi", "winbase"] }
actix-web-httpauth = "0.8.0"
once_cell = "1.17.1"
base64 = "0.13.0"
# Using rumqtt instead of paho-mqtt to avoid OpenSSL compilation issues
rumqttc = "0.24"
url = "2.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.28"
websocket = "0.26.5"
lazy_static = "1.4.0"
# Authentication and database dependencies (simplified)
uuid = { version = "1.0", features = ["v4", "serde"] }
actix-cors = "0.6"
tauri = { version = "2.0.0-beta.10" }
crossbeam-channel = "0.5.15"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }