[package]
name = "zbx-np-tauri"
version = "0.1.0"
description = "A Tauri application"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbx-np = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4.0"
tauri-plugin-window-state = "2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
